fix footer spacing

--- a/styles/sections/footer.scss
+++ b/styles/sections/footer.scss
@@ -2,7 +2,7 @@ footer {
   margin: 80px 8px 0 8px;
   
   .footer-content {
-    padding: 8px 0;
+    padding: 8px 0 16px 0;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -15,7 +15,7 @@ footer {
     margin: 320px 32px 0 32px;
 
     .footer-content {
-      padding: 32px 0;
+      padding: 16px 0;
     }
   }
 
